update Contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
 <h1>We would love to hear from you!</h1>
-<p>Contact us at anthonyjee0512@gmail.com</p>
+<p>Contact us at anthonyjee0512@gmail.com or call us at 1234567890</p>
