--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -11,9 +11,8 @@
     </div>
   <% end %>
 
-  <div class="field form-group">
-    <%= f.label :rating %>
-    <%= f.number_field :rating, class: "form-control" %>
+  <div id="star-rating">
+
   </div>
   <div class="field form-group">
     <%= f.label :comment %>
@@ -23,3 +22,10 @@
     <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<script>
+  $('#star-rating').raty({
+    path: 'https://s3.amazonaws.com/myyelpdemo0512/stars',
+    scoreName: 'review[rating]'
+  });
+</script>
