--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,6 +25,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
+        <li><a><%= "Hello, #{current_user.first_name.capitalize} #{current_user.last_name.capitalize[0]}."%></a></li>
         <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
         <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
         <% else %>
